# enum_coder

./: Cargo.toml  LICENSE-MIT  README.md
examples/: simple.rs
src/: lib.rs
