[package]
name = "enum_coder"
version = "0.0.1"

description = """
Enum coder macro. A syntancic sugar for generating lists of instructions,
intermediate representations for compilers etc.
"""
authors = ["Piotr Czarnecki <pioczarn@gmail.com>"]
documentation = "https://docs.rs/enum_coder/latest/enum_coder/"
repository = "https://github.com/pczarn/enum_coder/"
license = "MIT/Apache-2.0"

[lib]
name = "enum_coder"
proc-macro = true

[dependencies]
# log = "0.4"
# env_logger = "0.6"
syn = { version = "0.15", features = ["extra-traits", "fold", "full"] }
quote = "0.6"
